--- a/style.css
+++ b/style.css
@@ -114,10 +114,35 @@ nav{
     box-shadow: 3px 3px 3px rgb(48, 64, 94); /*Iniciar a partir daqui*/
 }
 
-.hok{
-    width: 350px;
-    height: 250px;
+#honorofkings{
+    width: 1000px;
+    height: 330px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    background-color: var(--cordestaque);
 }
+
+.video{
+    width: 500px;
+    height: 320px;
+    display: flex;
+    
+    padding-top: 3px;
+    padding-right: 10px;
+}
+
+.hok{
+    width: 300px;
+    height: 280px;
+    display: flex;
+    padding: 30px;
+    top: 50px;
+    
+}
+
+.alinhamento{
+    text-align: justify;
+}
+
+
 
